--- a/README
+++ b/README
@@ -2,6 +2,9 @@
 | de-psychiatrische-botvieren-zone |
 ------------------------------------
 
+# botvieren
+https://en.wiktionary.org/wiki/botvieren
+
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
