--- a/README
+++ b/README
@@ -2,6 +2,9 @@
 | de-psychiatrische-botvieren-zone |
 ------------------------------------
 
+# psychiatry
+https://en.wikipedia.org/wiki/Psychiatry
+
 # botvieren
 https://en.wiktionary.org/wiki/botvieren
 
